--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <br>
         </h1>
 
-        <div id="questionContainer" class=""></div>
+        <div id="questionContainer" style="display: none">
         <div id="question">Question</div>
         <div id="answerBtn" class="btnStyle">
             <button class="Btn">Option1</button>
@@ -27,9 +27,9 @@
             <button class="Btn">Option3</button>
             <button class="Btn">Option4</button>
         </div>
-
-        <button id="StartBtn" class="btn btn-success">Start</button>
-        <button id="nextBtn" class="btn btn-success" class="nextBtn hide">Next</button>
+        </div>
+        <button id="startBtn" class="btn btn-success" xonclick="startQuiz()">Start</button>
+        <button id="nextBtn" class="btn btn-success" class="nextBtn">Next</button>
         </button>
 
     </div>
