--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 
         <div id="questionContainer" style="display: none">
         <div id="question">Question</div>
-        <div id="answerBtn" class="btnStyle">
-            <button class="Btn">Option1</button>
-            <button class="Btn">Option2</button>
-            <button class="Btn">Option3</button>
-            <button class="Btn">Option4</button>
+        <div id="btnOptions" class="btnStyle">
+            <!-- <button class="btn">Option1</button>
+            <button class="btn">Option2</button>
+            <button class="btn">Option3</button>
+            <button class="btn">Option4</button> -->
         </div>
         </div>
-        <button id="startBtn" class="btn btn-success" xonclick="startQuiz()">Start</button>
-        <button id="nextBtn" class="btn btn-success" class="nextBtn">Next</button>
+        <button id="startBtn" class="btn btn-success">Start</button>
+    
         </button>
 
     </div>
